hphp/test/zend/good/ext-standard-strings/bug22187.php
<?php
	var_dump(number_format(0.0001, 1));
	var_dump(number_format(0.0001, 0));
?>