hphp/test/zend/bad/zend/bug46811.php
<?php
var_dump(ini_set("arg_separator.output", ""));
var_dump(ini_get("arg_separator.output"));
?>